Fixed overflow wrapping.

--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ main {
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.409);
     font-size: 1.2rem;
     font-weight: bold;
+    overflow-wrap: break-word;
     width: 300px;
     border-radius: 10px;
     padding: 1.5rem;
